Fix logo not centered when resizing page to mobile

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -930,7 +930,9 @@ ul.quadruplets,
   text-align: center; }
   #logo-holder a {
     display: block;
-    max-width: 347px; }
+    max-width: 347px;
+    margin-left: auto;
+    margin-right: auto; }
     #logo-holder a:focus {
       outline: none !important; }
       #logo-holder a:focus img {
